...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Date-->
        <LinearLayout
            android:id="@+id/task_date_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--Created-->
            <LinearLayout
                android:layout_width="wrap_content"
...
            </LinearLayout>


        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_play"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:background="@null"

             />
...
