<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_list_projects"
        android:icon="@drawable/ic_projects_24dp"
        android:title="@string/title_projects" />

    <item
        android:id="@+id/navigation_list_tasks"
        android:icon="@drawable/ic_tasks_24dp"
        android:title="@string/title_tasks" />

    <item
        android:id="@+id/navigation_new_task"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_add_task_24dp"
        android:title="@string/title_new_task" />

</menu>
