<resources>
    <string name="app_name">NeverMind</string>

    <string name="title_projects">Projects</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_new_task">New task</string>
    <string name="title_edit_task">Edit task</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="letter_year">y</string>
    <string name="letter_month">m</string>
    <string name="letter_day">d</string>
    <string name="letter_hour">h</string>
    <string name="letter_minute">min</string>
    <string name="letter_second">s</string>

    <string name="task_today">Task today</string>
    <string name="choose_project">Choose project</string>
    <string name="name_default_project">My Live</string>

    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="hint_create_task">Type task\'s text</string>
    <string name="toast_task_added">Task added.</string>


    <!--Contextual actions Action Mode-->
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="selected">selected</string>


    <!--Toolbar-->
    <string name="add">Add</string>
    <string name="add_notification">Add notification</string>

    <!--Row item -->
    <string name="created">created</string>
    <string name="started">started</string>
    <string name="last">last</string>
    <string name="duration">duration</string>
    <string name="total">total</string>
    <string name="more_duration">\></string>


    <string-array name="projects_delete_me">
        <item>My Live</item>
        <item>Build house</item>
        <item>Migration</item>
        <item>Charity</item>
    </string-array>


    <!--temp-->

</resources>
