...
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btAddNotification"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_toStartOf="@id/btCancelAlarm"
                    android:background="@drawable/ic_notification_add_black_24dp" />

                <Button
                    android:id="@+id/btCancelAlarm"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
...
